apps/hass/zwave/zwave-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave
  namespace: hass
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zwave
  template:
    metadata:
      labels:
        app: zwave
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 20
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: zwave
        image: ghcr.io/zwave-js/zwave-js-ui:10.4.1
        resources:
          requests:
            memory: 300Mi
            cpu: "10m"
          limits:
            memory: 300Mi
        livenessProbe: &probe
          httpGet:
            path: /health/zwave
            port: http
          initialDelaySeconds: 10
        readinessProbe: *probe
        ports:
        - containerPort: 8091
          name: http
          protocol: TCP
        - containerPort: 3000
          name: websocket
          protocol: TCP
        volumeMounts:
        - name: zwave-data
          mountPath: /usr/src/app/store
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      volumes:
      - name: zwave-data
        persistentVolumeClaim:
          claimName: zwave-pvc
