apps/hass/zwave/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwave
  namespace: hass
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: http
  hostnames:
  - "zwave.mgmt.sholdee.net"
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwave-https
  namespace: hass
spec:
  parentRefs:
  - name: mgmt-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "zwave.mgmt.sholdee.net"
  rules:
  - backendRefs:
    - name: zwave
      namespace: hass
      port: 8091
