apps/hass/zwave/zwave-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave
  namespace: hass
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: nginx
  rules:
  - host: zwave.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zwave
              port:
                number: 8091
  tls:
  - hosts:
    - zwave.mgmt.sholdee.net
    secretName: zwave-tls-secret
